[package]
name = "backend-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
chrono = { version = "0.4.22", features = ["serde"] }
envy = "0.3.3"
serde = { version="1.0.87", features = ["derive"] }
log = "0.4.0"
env_logger = "0.8.4"
reqwest = { version = "0.11", features = ["json","multipart"] }
csv = "1.1"
anyhow = "1.0.62"
thiserror = "1.0.32"
firebase-admin-auth-rs = "0.1.0"
base64 = "0.13.0"
urlencoding = "2.1.0"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "import"
path = "src/import.rs"
